@startuml US3009_DM

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> PostIt" {
  entity PostIt

  class Title
  class State
  class Coordinates
  class Description
  class Image
}

package "<<aggregate>> User" {
  entity User
}

entity User <<entity>> <<root>> {
}

entity PostIt <<entity>> <<root>>{
  - createdAt
  - isLatest
}

class Title <<(V,#FF8B40) value object>> {}

class State <<(V,#FF8B40) value object>> {}
class Coordinates <<(V,#FF8B40) value object>> {}
class Description <<(V,#FF8B40) value object>> {}
class Image <<(V,#FF8B40) value object>> {}


note left of State
  ACTIVE
  DELETED
end note

package "<<aggregate>> Board" {
  entity Board
}

entity Board <<entity>> <<root>>{
}

PostIt *- Title
PostIt --> "1" State : has

PostIt ---> "1" Board : belongs to
PostIt --> "0..1" PostIt : previous
PostIt --> "0..1" Description : has
PostIt --> "0..1" Image : has
PostIt --> "1" Coordinates : has
PostIt ---> "1" User : is owned by

@enduml
